Assignment 2 Partial Updation